--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,12 @@
 		<dependency>
 			<groupId>com.thoughtworks.gauge</groupId>
 			<artifactId>gauge-java</artifactId>
-			<version>0.7.2</version>
+			<version>0.7.15</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 	</dependencies>
